Support any duration on iOS

--- a/examples/android/app/build.gradle
+++ b/examples/android/app/build.gradle
@@ -121,8 +121,6 @@ android {
 
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.android.support:design:23.3.0'
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(path: ':react-native-snackbar')
 }
