--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,33 @@
 #### joe made this: http://goel.io/joe
 
-#####=== Android ===#####
+# OSX
+#
+.DS_Store
+
+# Xcode
+#
+*.xcscmblueprint
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
+
+
+# Android
+#
 
 # Built application files
 *.apk
@@ -29,4 +56,3 @@ proguard/
 
 # Log Files
 *.log
-
