--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "^0.14.8",
-    "react-native": "^0.23.1"
+    "react-native": "^0.23.1",
+    "react-native-snackbar": "../"
   }
 }
