[Example] Re-init from scratch with latest dependencies

--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,3 +1,6 @@
-rootProject.name = 'examples'
+rootProject.name = 'SnackbarExample'
 
-include ':app', ':react-native-snackbar'
+include ':react-native-snackbar'
+project(':react-native-snackbar').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-snackbar/android')
+
+include ':app'
