--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-snackbar",
   "version": "0.2.2",
-  "description": "React Native Snackbar",
+  "description": "Material-design \"Snackbar\" component for both Android and iOS",
   "main": "index.js",
   "files": [
     "android",
