--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.3.0",
   "description": "Material-design \"Snackbar\" component for both Android and iOS",
   "main": "index.js",
+  "scripts": {
+    "lint": "eslint . --ext .js,.jsx"
+  },
   "files": [
     "android",
     "ios"
@@ -27,6 +30,14 @@
   },
   "homepage": "https://github.com/cooperka/react-native-snackbar",
   "devDependencies": {
+    "babel-eslint": "~7.1.1",
+    "eslint": "~3.14.1",
+    "eslint-config-airbnb": "~14.0.0",
+    "eslint-config-cooperka": "~0.2.4",
+    "eslint-plugin-import": "~2.2.0",
+    "eslint-plugin-jsx-a11y": "~3.0.2",
+    "eslint-plugin-react": "~6.9.0",
+    "eslint-plugin-react-native": "~2.2.1",
     "react": "~15.4.2",
     "react-native": "~0.40.0"
   }
