--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "url": "https://github.com/cooperka/react-native-snackbar/issues"
   },
   "homepage": "https://github.com/cooperka/react-native-snackbar",
+  "peerDependencies": {
+    "react": ">=15.1",
+    "react-native": ">=0.40"
+  },
   "devDependencies": {
     "babel-eslint": "~7.1.1",
     "eslint": "~3.14.1",
@@ -38,7 +42,7 @@
     "eslint-plugin-jsx-a11y": "~3.0.2",
     "eslint-plugin-react": "~6.9.0",
     "eslint-plugin-react-native": "~2.2.1",
-    "react": "~15.4.2",
-    "react-native": "~0.40.0"
+    "react": "^15.4.2",
+    "react-native": "^0.40.0"
   }
 }
