--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "react-native-snackbar",
   "version": "0.3.1",
   "description": "Material-design \"Snackbar\" component for Android and iOS",
-  "main": "index.js",
+  "main": "src/index.js",
   "files": [
+    "src",
     "android",
     "ios"
   ],
