Moved typings into src

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.2",
   "description": "Material-design \"Snackbar\" component for Android and iOS",
   "main": "src/index.js",
-  "types": "./index.d.ts",
+  "types": "src/index.d.ts",
   "files": [
     "src",
     "android",
