--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "homepage": "https://github.com/cooperka/react-native-snackbar",
   "peerDependencies": {
-    "react": ">=15.1",
+    "react": ">=15.1 || >=16.0.0-alpha.6",
     "react-native": ">=0.40"
   },
   "devDependencies": {
