--- a/example/package.json
+++ b/example/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "postinstall": "rm -rf node_modules/react-native-snackbar/{node_modules,example}",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
