:white_check_mark: [Example] Make sure lib is up to date before testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
 
 install:
  - yarn install
- - cd example && yarn install
+ - cd example && yarn install && yarn run sync
  - cd ..
 
 script:
