--- a/example/package.json
+++ b/example/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "preinstall": "cd .. && npm run build",
     "postinstall": "rm -rf node_modules/react-native-snackbar/node_modules node_modules/react-native-snackbar/example",
+    "sync": "mkdir node_modules/react-native-snackbar; cp -R ../{package.json,android,ios,lib} node_modules/react-native-snackbar/",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
