--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "preinstall": "cd .. && npm run build",
-    "postinstall": "rm -rf node_modules/react-native-snackbar/node_modules node_modules/react-native-snackbar/example node_modules/react-native-snackbar/.git",
+    "postinstall": "rm -rf node_modules/react-native-snackbar/node_modules node_modules/react-native-snackbar/example",
     "sync": "./sync.sh",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
