:arrow_up: Upgrade devDependencies

--- a/package.json
+++ b/package.json
@@ -50,18 +50,18 @@
     "react-native": ">=0.40"
   },
   "devDependencies": {
-    "babel-cli": "6.24.1",
-    "babel-eslint": "7.2.3",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "15.0.1",
-    "eslint-config-cooperka": "0.2.4",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "5.0.1",
-    "eslint-plugin-react": "7.0.1",
-    "eslint-plugin-react-native": "2.3.2",
-    "flow-bin": "0.40.0",
-    "jest": "20.0.4",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.45.1"
+    "babel-cli": "6.26.0",
+    "babel-eslint": "8.0.1",
+    "eslint": "4.9.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-config-cooperka": "0.2.7",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-react-native": "3.1.0",
+    "flow-bin": "0.57.3",
+    "jest": "21.2.1",
+    "react": "16.0.0",
+    "react-native": "0.49.3"
   }
 }
