--- a/example/package.json
+++ b/example/package.json
@@ -10,15 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.47.1",
+    "react": "16.0.0",
+    "react-native": "0.49.3",
     "react-native-snackbar": "file:.."
   },
   "devDependencies": {
-    "babel-jest": "20.0.3",
-    "babel-preset-react-native": "2.1.0",
-    "jest": "20.0.4",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "babel-jest": "21.2.0",
+    "babel-preset-react-native": "4.0.0",
+    "jest": "21.2.1",
+    "react-test-renderer": "16.0.0"
   },
   "jest": {
     "preset": "react-native"
