--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "lint": "eslint src example --ext .js,.jsx",
+    "lint": "eslint . --ext .js,.jsx",
     "flow": "flow src",
     "clean": "rm -rf lib",
     "build": "npm run clean && babel src --out-dir lib --ignore src/__tests__",
