--- a/package.json
+++ b/package.json
@@ -51,17 +51,17 @@
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-eslint": "8.0.2",
-    "eslint": "4.12.1",
+    "babel-eslint": "8.2.1",
+    "eslint": "4.16.0",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-config-cooperka": "0.2.7",
+    "eslint-config-cooperka": "0.2.9",
     "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.5.1",
-    "eslint-plugin-react-native": "3.2.0",
-    "flow-bin": "0.60.0",
-    "jest": "21.2.1",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.6.0",
+    "eslint-plugin-react-native": "3.2.1",
+    "flow-bin": "^0.61.0",
+    "jest": "22.1.4",
     "react": "16.2.0",
-    "react-native": "0.50.4"
+    "react-native": "0.52.2"
   }
 }
