:pencil: Tweak package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-snackbar",
   "version": "0.4.7",
-  "description": "Material-design \"Snackbar\" component for Android and iOS",
+  "description": "Material Design \"Snackbar\" component for Android and iOS.",
   "main": "lib/index.js",
   "types": "src/index.d.ts",
   "files": [
