--- a/package.json
+++ b/package.json
@@ -50,17 +50,18 @@
     "react-native": ">=0.40"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-eslint": "8.2.1",
-    "eslint": "4.16.0",
-    "eslint-config-airbnb": "16.1.0",
+    "@babel/cli": "7.0.0-beta.47",
+    "@babel/core": "7.0.0-beta.47",
+    "babel-eslint": "8.2.6",
+    "eslint": "5.3.0",
+    "eslint-config-airbnb": "17.1.0",
     "eslint-config-cooperka": "0.2.9",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.6.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
     "eslint-plugin-react-native": "3.2.1",
-    "jest": "22.1.4",
-    "react": "16.2.0",
-    "react-native": "0.52.2"
+    "jest": "23.5.0",
+    "react": "16.4.1",
+    "react-native": "0.56"
   }
 }
