--- a/example/package.json
+++ b/example/package.json
@@ -10,15 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.2.0",
-    "react-native": "0.52.2",
+    "react": "16.4.1",
+    "react-native": "0.56.0",
     "react-native-snackbar": "file:.."
   },
   "devDependencies": {
-    "babel-jest": "22.1.0",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.1.4",
-    "react-test-renderer": "16.2.0"
+    "@babel/core": "7.0.0-beta.47",
+    "babel-jest": "23.4.2",
+    "babel-preset-react-native": "5.0.2",
+    "jest": "23.5.0",
+    "react-test-renderer": "16.4.2"
   },
   "jest": {
     "preset": "react-native"
