--- a/example/package.json
+++ b/example/package.json
@@ -22,6 +22,9 @@
     "react-test-renderer": "16.4.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    }
   }
 }
