--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    },
     "modulePathIgnorePatterns": [
       "<rootDir>/example/"
     ],
