--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,6 +13,7 @@ def _ext = rootProject.ext
 def _reactNativeVersion = _ext.has('reactNative') ? _ext.reactNative : '+'
 def _compileSdkVersion = _ext.has('compileSdkVersion') ? _ext.compileSdkVersion : 26
 def _buildToolsVersion = _ext.has('buildToolsVersion') ? _ext.buildToolsVersion : '26.0.3'
+def _supportLibVersion = _ext.has('supportLibVersion') ? _ext.supportLibVersion : '26.1.0'
 def _minSdkVersion = _ext.has('minSdkVersion') ? _ext.minSdkVersion : 16
 def _targetSdkVersion = _ext.has('targetSdkVersion') ? _ext.targetSdkVersion : 26
 
@@ -41,7 +42,7 @@ repositories {
 dependencies {
     compile "com.facebook.react:react-native:${_reactNativeVersion}"
 
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:appcompat-v7:${_supportLibVersion}'
+    compile 'com.android.support:support-v4:${_supportLibVersion}'
+    compile 'com.android.support:design:${_supportLibVersion}'
 }
