--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,8 @@ buildscript {
 
 apply plugin: "com.android.library"
 
+// Fallback versions are intended to mirror
+// https://github.com/facebook/react-native/blob/v0.56.0/local-cli/templates/HelloWorld/android/build.gradle
 def _ext = rootProject.ext
 def _reactNativeVersion = _ext.has('reactNative') ? _ext.reactNative : '+'
 def _compileSdkVersion = _ext.has('compileSdkVersion') ? _ext.compileSdkVersion : 26
@@ -42,7 +44,7 @@ repositories {
 dependencies {
     compile "com.facebook.react:react-native:${_reactNativeVersion}"
 
-    compile 'com.android.support:appcompat-v7:${_supportLibVersion}'
-    compile 'com.android.support:support-v4:${_supportLibVersion}'
-    compile 'com.android.support:design:${_supportLibVersion}'
+    compile "com.android.support:appcompat-v7:${_supportLibVersion}"
+    compile "com.android.support:support-v4:${_supportLibVersion}"
+    compile "com.android.support:design:${_supportLibVersion}"
 }
