--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -95,7 +95,7 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    buildToolsVersion '28.0.2'
 
     defaultConfig {
         applicationId "com.snackbarexample"
