--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,11 +13,11 @@ apply plugin: "com.android.library"
 // https://github.com/facebook/react-native/blob/v0.56.0/local-cli/templates/HelloWorld/android/build.gradle
 def _ext = rootProject.ext
 def _reactNativeVersion = _ext.has('reactNative') ? _ext.reactNative : '+'
-def _compileSdkVersion = _ext.has('compileSdkVersion') ? _ext.compileSdkVersion : 26
-def _buildToolsVersion = _ext.has('buildToolsVersion') ? _ext.buildToolsVersion : '26.0.3'
-def _supportLibVersion = _ext.has('supportLibVersion') ? _ext.supportLibVersion : '26.1.0'
+def _compileSdkVersion = _ext.has('compileSdkVersion') ? _ext.compileSdkVersion : 28
+def _buildToolsVersion = _ext.has('buildToolsVersion') ? _ext.buildToolsVersion : '28.0.1'
+def _supportLibVersion = _ext.has('supportLibVersion') ? _ext.supportLibVersion : '28.0.0'
 def _minSdkVersion = _ext.has('minSdkVersion') ? _ext.minSdkVersion : 16
-def _targetSdkVersion = _ext.has('targetSdkVersion') ? _ext.targetSdkVersion : 26
+def _targetSdkVersion = _ext.has('targetSdkVersion') ? _ext.targetSdkVersion : 28
 
 android {
     compileSdkVersion _compileSdkVersion
@@ -42,9 +42,9 @@ repositories {
 }
 
 dependencies {
-    compile "com.facebook.react:react-native:${_reactNativeVersion}"
+    implementation "com.facebook.react:react-native:${_reactNativeVersion}"
 
-    compile "com.android.support:appcompat-v7:${_supportLibVersion}"
-    compile "com.android.support:support-v4:${_supportLibVersion}"
-    compile "com.android.support:design:${_supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:${_supportLibVersion}"
+    implementation "com.android.support:support-v4:${_supportLibVersion}"
+    implementation "com.android.support:design:${_supportLibVersion}"
 }
