--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-snackbar",
   "version": "0.5.3",
   "description": "Material Design \"Snackbar\" component for Android and iOS.",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "types": "src/index.d.ts",
   "files": [
     "src",
