--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -95,7 +95,6 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '28.0.2'
 
     defaultConfig {
         applicationId "com.snackbarexample"
@@ -137,10 +136,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:26.0.3"
-    compile "com.facebook.react:react-native:+"  // From node_modules
-    compile project(':react-native-snackbar')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.android.support:appcompat-v7:26.0.3"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-snackbar')
 }
 
 // Run this once to be able to run the application with BUCK
