--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,7 +19,7 @@ apply plugin: "com.android.library"
 def _ext = rootProject.ext
 def _reactNativeVersion = _ext.has('reactNative') ? _ext.reactNative : '+'
 def _compileSdkVersion = _ext.has('compileSdkVersion') ? _ext.compileSdkVersion : 28
-def _materialVersion = _ext.has('materialVersion') ? _ext.supportLibVersion : '1.0.0'
+def _materialVersion = _ext.has('materialVersion') ? _ext.materialVersion : '1.0.0'
 def _minSdkVersion = _ext.has('minSdkVersion') ? _ext.minSdkVersion : 16
 def _targetSdkVersion = _ext.has('targetSdkVersion') ? _ext.targetSdkVersion : 28
 
