feat: Update typescript pipeline
Some small housekeeping on different areas:
- Exports all interfaces used https://github.com/cooperka/react-native-snackbar/pull/111#issuecomment-509549617. This is best practice in the industry. As a result, renamed the `Action` interface to `SnackbarAction` so it reflects where it's from. Also renames `Snackbar` to `SnackbarStatic` which is the naming convention (See React Native's Alert for example https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/react-native/index.d.ts#L7011).

- Removes the header at the top as that's only required for definitions hosted on DefinitelyTyped. Forgot to remove this when I ported the definitions.

- Fixed the definitions to work correctly. The attempt in #111 was good but it does an incorrect export at https://github.com/cooperka/react-native-snackbar/blob/master/src/index.d.ts#L92 which allows for `import { Snackbar } from 'react-native-snackbar'`. Instead the const should be declared and default exported.

- Lastly adds a typescript test that'll test definitions in ci so we don’t have these problems going forward.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,5 @@ script:
 # Ignoring flow for now because it just fails on all sorts of React Native issues.
 # - yarn run flow
  - yarn test -- --cacheDirectory="jest-cache"
+ - yarn test:types
  - cd example && yarn test -- --cacheDirectory="jest-cache2"
