--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "test:types": "tsc",
     "lint": "eslint . --ext .js,.jsx",
     "flow": "flow src",
     "clean": "rm -rf lib",
@@ -65,6 +66,7 @@
     "eslint-plugin-react-native": "3.2.1",
     "jest": "23.5.0",
     "react": "16.4.1",
-    "react-native": "0.56"
+    "react-native": "0.56",
+    "typescript": "^3.5.3"
   }
 }
