--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -94,12 +94,12 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 26
 
     defaultConfig {
         applicationId "com.snackbarexample"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         ndk {
@@ -137,7 +137,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation "com.android.support:appcompat-v7:26.0.3"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-snackbar')
 }
