--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,6 +1,3 @@
 rootProject.name = 'SnackbarExample'
-
-include ':react-native-snackbar'
-project(':react-native-snackbar').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-snackbar/android')
-
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
