--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "preinstall": "cd .. && npm run build",
-    "postinstall": "rm -rf node_modules/react-native-snackbar/node_modules node_modules/react-native-snackbar/example && cd ios && pod install && cd ..",
+    "postinstall": "rm -rf node_modules/react-native-snackbar/node_modules node_modules/react-native-snackbar/example",
     "sync": "./sync.sh",
     "start": "react-native start",
     "test": "jest"
