:wrench: :zap: AndroidX support; refresh example app (#112)
* AndroidX support

* Fixing typo

* Updating Android gradle repositories as per CR comments

* Removing android.enableJetifier=true in library as per CR comments

* Reverting AndroidX changes (for now)

* Updating example app to latest version of React Native

* CI fix

* fixing linting errors

* Regenerate yarn.lock after significant changes

* Commit some auto-changes to iOS configs

* Patch gradle version

--- a/example/.gitignore
+++ b/example/.gitignore
@@ -39,7 +39,6 @@ yarn-error.log
 # BUCK
 buck-out/
 \.buckd/
-*.keystore
 
 # fastlane
 #
@@ -51,3 +50,6 @@ buck-out/
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
+
+# CocoaPods
+/ios/Pods/
