--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/cli": "7.0.0-beta.47",
     "@babel/core": "7.0.0-beta.47",
     "babel-eslint": "8.2.6",
+    "babel-preset-react-native": "^4.0.1",
     "eslint": "5.3.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-cooperka": "0.2.9",
