--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lint": "eslint . --ext .js,.jsx",
     "flow": "flow src",
     "clean": "rm -rf lib",
-    "build": "npm run clean && babel src --out-dir lib --ignore src/__tests__",
-    "prepublish": "npm run build"
+    "build": "yarn run clean && babel src --out-dir lib --ignore src/__tests__",
+    "prepublish": "yarn run build"
   },
   "jest": {
     "preset": "react-native",
