--- a/example/package.json
+++ b/example/package.json
@@ -10,17 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.8.6",
-    "react-native": "0.60.3",
+    "react": "16.10.2",
+    "react-native": "0.61.2",
     "react-native-snackbar": "file:.."
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/runtime": "^7.5.4",
-    "babel-jest": "^24.8.0",
-    "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.55.0",
-    "react-test-renderer": "16.8.6"
+    "@babel/core": "7.6.4",
+    "@babel/runtime": "7.6.3",
+    "babel-jest": "24.9.0",
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.56.0",
+    "react-test-renderer": "16.10.2"
   },
   "jest": {
     "preset": "react-native"
