--- a/package.json
+++ b/package.json
@@ -54,19 +54,20 @@
     "react-native": ">=0.60"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.47",
-    "@babel/core": "7.0.0-beta.47",
-    "babel-eslint": "8.2.6",
-    "eslint": "5.3.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-cooperka": "0.2.9",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-react-native": "3.2.1",
-    "jest": "23.5.0",
-    "react": "16.4.1",
-    "react-native": "0.56",
-    "typescript": "^3.5.3"
+    "@babel/cli": "7.6.4",
+    "@babel/core": "7.6.4",
+    "babel-eslint": "10.0.3",
+    "eslint": "6.5.1",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-cooperka": "1.0.2",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-native": "3.7.0",
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.56.0",
+    "react": "16.10.2",
+    "react-native": "0.61.2",
+    "typescript": "3.6.4"
   }
 }
