--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -4,12 +4,13 @@
     android:versionName="1.0">
 
     <uses-permission android:name="android.permission.INTERNET" />
- 
+
     <uses-sdk />
 
     <application
       android:name=".MainApplication"
       android:allowBackup="true"
+      android:supportsRtl="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
