--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@babel/cli": "7.6.4",
     "@babel/core": "7.6.4",
+    "@types/react-native": "^0.61.22",
     "babel-eslint": "10.0.3",
     "babel-jest": "24.9.0",
     "eslint": "6.5.1",
