--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -2,18 +2,19 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "28.0.3"
+        kotlinVersion = '1.3.50'
+        buildToolsVersion = "29.0.3"
         minSdkVersion = 16
-        compileSdkVersion = 28
-        targetSdkVersion = 28
-        supportLibVersion = "28.0.0"
+        compileSdkVersion = 29
+        targetSdkVersion = 29
+        supportLibVersion = "29.0.0"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:3.4.2')
+        classpath('com.android.tools.build:gradle:3.5.3')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
