--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,7 @@ def _targetSdkVersion = _ext.has('targetSdkVersion') ? _ext.targetSdkVersion : 2
 android {
     def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION
     if (agpVersion.tokenize('.')[0].toInteger() >= 7) {
-      namespace "com.cooperka.rnsnackbar"
+      namespace "com.azendoo.reactnativesnackbar"
     }
     compileSdkVersion _compileSdkVersion
 
