--- a/example/package.json
+++ b/example/package.json
@@ -3,28 +3,44 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "preinstall": "cd .. && yarn run build",
-    "postinstall": "rm -rf node_modules/react-native-snackbar/node_modules node_modules/react-native-snackbar/example",
-    "sync": "./sync.sh",
-    "start": "react-native start",
-    "ios": "react-native run-ios",
     "android": "react-native run-android",
+    "build:android": "npm run mkdist && react-native bundle --entry-file index.js --platform android --dev true --bundle-output dist/main.android.jsbundle --assets-dest dist/res",
+    "build:ios": "npm run mkdist && react-native bundle --entry-file index.js --platform ios --dev true --bundle-output dist/main.ios.jsbundle --assets-dest dist",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
+    "mkdist": "node -e \"require('node:fs').mkdirSync('dist', { recursive: true, mode: 0o755 })\"",
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.10.2",
-    "react-native": "0.61.2",
-    "react-native-snackbar": "file:.."
+    "@react-native/new-app-screen": "0.80.2",
+    "react": "19.1.0",
+    "react-native": "0.80.2",
+    "react-native-snackbar": "^2.9.0"
   },
   "devDependencies": {
-    "@babel/core": "7.6.4",
-    "@babel/runtime": "7.6.3",
-    "babel-jest": "24.9.0",
-    "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.0",
-    "react-test-renderer": "16.10.2"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "19.1.1",
+    "@react-native-community/cli-platform-android": "19.1.1",
+    "@react-native-community/cli-platform-ios": "19.1.1",
+    "@react-native/babel-preset": "0.80.2",
+    "@react-native/eslint-config": "0.80.2",
+    "@react-native/metro-config": "0.80.2",
+    "@react-native/typescript-config": "0.80.2",
+    "@rnx-kit/metro-config": "^2.1.0",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^19.1.0",
+    "@types/react-test-renderer": "^19.1.0",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-native-test-app": "^4.4.12",
+    "react-test-renderer": "19.1.0",
+    "typescript": "5.0.4"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=18"
   }
 }
