--- a/example/package.json
+++ b/example/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "SnackbarExample",
+  "name": "react-native-snackbar-example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "preinstall": "cd .. && yarn run build",
-    "postinstall": "rm -rf node_modules/react-native-snackbar/node_modules node_modules/react-native-snackbar/example",
-    "sync": "./sync.sh",
-    "start": "react-native start",
-    "ios": "react-native run-ios",
     "android": "react-native run-android",
-    "test": "jest"
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "build:android": "react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
+    "build:ios": "react-native build-ios --mode Debug"
   },
   "dependencies": {
-    "react": "16.10.2",
-    "react-native": "0.61.2",
-    "react-native-snackbar": "file:.."
+    "react": "19.2.0",
+    "react-native": "0.83.0"
   },
   "devDependencies": {
-    "@babel/core": "7.6.4",
-    "@babel/runtime": "7.6.3",
-    "babel-jest": "24.9.0",
-    "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.0",
-    "react-test-renderer": "16.10.2"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
+    "@react-native/babel-preset": "0.83.0",
+    "@react-native/metro-config": "0.83.0",
+    "@react-native/typescript-config": "0.83.0",
+    "@types/react": "^19.2.0",
+    "react-native-builder-bob": "^0.40.17",
+    "react-native-monorepo-config": "^0.3.1"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=20"
   }
 }
