--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,2 @@
-<manifest package="com.azendoo.reactnativesnackbar">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 </manifest>
