--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "build:android": "react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
-    "build:ios": "react-native build-ios --mode Debug"
+    "build:ios": "react-native build-ios --mode Debug",
+    "test": "jest"
   },
   "dependencies": {
     "react": "19.2.0",
@@ -23,9 +24,15 @@
     "@react-native/babel-preset": "0.83.0",
     "@react-native/metro-config": "0.83.0",
     "@react-native/typescript-config": "0.83.0",
-    "@types/react": "^19.2.0",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/react": "19.2.0",
+    "jest": "^29.7.0",
     "react-native-builder-bob": "^0.40.17",
-    "react-native-monorepo-config": "^0.3.1"
+    "react-native-monorepo-config": "^0.3.1",
+    "react-test-renderer": "19.2.0"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "engines": {
     "node": ">=20"
